--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node script.js"
+    "start": "node src/script.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "moment": "^2.30.1",
-    "moments": "^0.0.1"
+    "express": "^4.21.0",
+    "moment": "^2.30.1"
   }
 }
