--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/script.js"
+    "start": "node src/script.js",
+    "new": "ts-node src/script.ts"
+    
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "moment": "^2.30.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
