--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/script.js",
-    "new": "ts-node src/script.ts"
-    
+    "new": "ts-node src/script.ts",
+    "databasetest": "ts-node prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "@types/express": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "moment": "^2.30.1",
     "path": "^0.12.7",
+    "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
