--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:../db/site.db"
+JWT_SECRET=very_big_sicret
+JWT_EXPIRES_IN=1d 
