--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "prisma": "^5.20.0",
