--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
